<resources>
    <string name="app_name">WordClock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="world">WorldClock</string>
    <string name="settings">Settings</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register Here</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_to_world_clock">Welcome To World Clock</string>
    <string name="create_account">Create Account</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="location_text">Location</string>
    <string name="hh_mm">hh:mm</string>
    <string name="am">AM</string>
    <string name="today_0hrs">GMT +0Hrs</string>
    <string name="email_required_message">Email is required</string>
    <string name="pwd_required_message">Password is required</string>
    <string name="login_successful">Login Successful!</string>
    <string name="pwd_six_chars">Password must be atleast 6 characters long</string>
</resources>